# proj-flow

./: .readthedocs.yaml  CHANGELOG.rst  README.md  ROADMAP.md  lint.py  pyproject.toml
.flow/: config.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: python-publish.yml  release-merged-pr.yml  release.yml
actions/bootstrap/: action.yml
cxx_flow/: __init__.py
cxx_flow/api/: __init__.py  arg.py  completers.py  env.py  step.py
cxx_flow/base/: __init__.py  inspect.py
cxx_flow/commands/: __init__.py  bootstrap.py  init.py  list.py  run.py  system.py
cxx_flow/commands/ci/: __init__.py  matrix.py
cxx_flow/data/template/layers/base/: flow.cmd
cxx_flow/data/template/layers/cmake/: CMakeLists.txt.mustache
cxx_flow/flow/: commands.py  config.py  configs.py  step.py  steps.py
cxx_flow/flow/cli/: __init__.py  cmds.py  finder.py
cxx_flow/log/hosting/: github.py
cxx_flow/log/rich_text/: api.py
cxx_flow/plugins/cmake/: __init__.py  build.py  config.py  context.py  pack.py  parser.py  test.py
cxx_flow/plugins/commands/: bootstrap.py  init.py  list.py  run.py  system.py
cxx_flow/plugins/commands/ci/: __init__.py  matrix.py
cxx_flow/plugins/conan/: __init__.py
cxx_flow/plugins/sign/: __init__.py  win32.py
cxx_flow/plugins/store/: store_both.py  store_packages.py  store_tests.py
cxx_flow/template/layers/base/.flow/: config.json
cxx_flow/template/layers/cmake/: CMakeLists.txt.mustache
cxx_flow/template/layers/cmake/.flow/extensions/wall/icons/: __init__.py.mustache
docs/: Makefile  enum-mods.py  enum_mods.py  make.bat  requirements.txt  rtd.py
docs/source/: conf.py  config.rst  index.rst  template.rst  usage.rst
docs/source/commands/: bootstrap.rst  ci-matrix.rst  github-matrix.rst  github-publish.rst  github-release.rst  index.rst  init.rst  list.rst  run.rst  system.rst
docs/source/steps/: index.rst
docs/template/: api.index.rst.mustache  api.rst.mustache
schema/: test-runner.yaml
src/proj_flow/: __init__.py  dependency.py
src/proj_flow/api/: arg.py  completers.py  ctx.py  env.py  init.py  makefile.py  release.py  step.py
src/proj_flow/base/: __init__.py  cmake_presets.py  cmd.py  inspect.py  matrix.py  plugins.py  registry.py  uname.py
src/proj_flow/cli/: __init__.py  argument.py  finder.py
src/proj_flow/ctrf/: __init__.py  ctrf.py  googletest.py  junit.py
src/proj_flow/ext/: store.py
src/proj_flow/ext/cplusplus/cmake/: __init__.py  __version__.py  context.py  parser.py  presets.py  project.py  steps.py
src/proj_flow/ext/cplusplus/conan/: __init__.py  _conan.py
src/proj_flow/ext/github/: __init__.py  cli.py  publishing.py  switches.py
src/proj_flow/ext/python/: rtdocs.py  steps.py  version.py
src/proj_flow/ext/sign/: __init__.py  api.py  win32.py
src/proj_flow/ext/test_runner/: __init__.py  cli.py
src/proj_flow/ext/test_runner/driver/: commands.py  env.py  file_writes.py  test.py  testbed.py
src/proj_flow/ext/test_runner/utils/: archives.py  counters.py  io.py
src/proj_flow/ext/tests/: __init__.py  steps.py
src/proj_flow/ext/tools/: run_linter.py
src/proj_flow/ext/webidl/base/: config.py
src/proj_flow/ext/webidl/cli/: cmake.py  depfile.py  gen.py
src/proj_flow/ext/webidl/model/: ast.py  builders.py  versioning.py
src/proj_flow/flow/: __init__.py  configs.py  github-runners.yaml  layer.py  steps.py
src/proj_flow/flow/cli/: __init__.py
src/proj_flow/log/: commit.py  msg.py  release.py
src/proj_flow/log/hosting/: github.py
src/proj_flow/log/rich_text/: api.py  markdown.py  re_structured_text.py
src/proj_flow/minimal/: __init__.py  base.py  bootstrap.py  init.py  list.py  list_cmd.py  run.py  system.py
src/proj_flow/minimal/ext/: bug_report.py  versions.py
src/proj_flow/project/: __init__.py  api.py  cplusplus.py  interact.py
src/proj_flow/project/cplusplus/: __init__.py  cmake_context.py  conan_context.py  project.py
src/proj_flow/template/layers/: github_actions.json
src/proj_flow/template/layers/base/.flow/: flow.py.mustache
src/proj_flow/template/layers/github_actions/.github/workflows/: build.yml
tests/test_proj_flow/: __init__.py  capture.py  load_flow_cfg.py  mocks.py  test_dependency.py
tests/test_proj_flow/api/: test_arg.py  test_completers.py  test_ctx.py  test_env.py  test_env_config.py  test_env_flow_cfg.py  test_env_runtime.py  test_init.py  test_makefile.py  test_release.py  test_step.py
tests/test_proj_flow/base/: test_base.py  test_cmd.py  test_matrix.py  test_name_list.py  test_plugins.py  test_registry.py  test_uname.py
tests/test_proj_flow/cli/: test_argument.py  test_finder.py  test_main.py
tests/test_proj_flow/flow/: test_configs.py  test_layer.py
tests/test_proj_flow/playground/.flow/: config.yaml
tests/test_proj_flow/playground/.flow/extensions/: playground_extension.py
tests/test_proj_flow/project/: project_fubar.py  test_api.py  test_cplusplus.py  test_interact.py
