[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "cxx_flow/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["cxx_flow"]

[project]
name = "cxx-flow"
description = "C++ project maintenance, automated"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
readme = "README.md"
authors = [{name = "Marcin Zdun", email = "marcin.zdun@gmail.com"}]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = ["chevron2021", "prompt_toolkit"]

[project.scripts]
cxx-flow = "cxx_flow.flow.cli:main"
