[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "src/proj_flow/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/proj_flow"]

[project]
authors = [{name = "Marcin Zdun", email = "marcin.zdun@gmail.com"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "argcomplete~=3.5",
  "chevron2021",
  "prompt_toolkit~=3.0",
  "PyYAML~=6.0",
  "toml~=0.10",
  "pywebidl2~=0.1",
  "requests-cache~=1.3",
  "python-dateutil~=2.9",
]
description = "C++ project maintenance, automated"
dynamic = ["version"]
keywords = [
  'C/C++',
  'build-tool',
  'c++',
  'ci-cd',
  'continuous-integration',
  'cpp',
  'dependencies',
  'dependency-manager',
  'developer',
  'developer-tools',
  'development',
  'meta-build-tool',
  'pipeline',
  'tools-and-automation',
]
license = "MIT"
name = "proj-flow"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Changelog = "https://github.com/mzdun/proj-flow/blob/main/CHANGELOG.rst"
Documentation = "https://proj-flow.readthedocs.io/en/latest/"
Homepage = "https://pypi.org/project/proj-flow/"
"Source Code" = "https://github.com/mzdun/proj-flow"

[project.scripts]
proj-flow = "proj_flow.cli:main"

[project.optional-dependencies]
dev = [
  "build~=1.4",
  "twine<=6.0.1",
  "sphinx~=9.1",
  "black~=25.0",
  "isort~=6.0",
  "types-PyYAML~=6.0",
  "types-chevron~=0.14",
  "types-toml~=0.10",
]

[tool.black]
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
